# warden-worker

./: .gitignore  Cargo.toml  README.md  logs-2026-02-28T01_02_32.150Z.json  wrangler.jsonc
.github/workflows/: push-cloudflare.yaml
migrations/: 20260216_add_avatar_color.sql
scripts/: patch-webvault-kdf.mjs  patch-webvault-turnstile.mjs
sql/: schema.sql  schema_full.sql
sql/migrations/: 20260126_add_two_factor_authenticator.sql  20260218_add_password_salt.sql  20260220_add_ua_history.sql  20260222_add_two_factor_email.sql  20260223_add_totp_recover.sql  20260223_set_default_argon2id.sql  20260225_add_auth_requests.sql  20260225_add_two_factor_webauthn.sql  20260226_add_protected_action_otp.sql  20260226_upgrade_webauthn_for_passkey.sql  20260227_send_files_use_r2.sql
src/: auth.rs  background.rs  crypto.rs  db.rs  domains.rs  entry.js  error.rs  heavy_do.rs  jwt.rs  lib.rs  logging.rs  notifications.rs  notify.rs  router.rs  two_factor.rs  webauthn.rs
src/handlers/: accounts.rs  ciphers.rs  compat.rs  config.rs  css.rs  devices.rs  folders.rs  icons.rs  identity.rs  import.rs  mod.rs  sends.rs  settings.rs  sync.rs  two_factor.rs  usage.rs  webauthn.rs
src/models/: cipher.rs  folder.rs  import.rs  send.rs  sync.rs  user.rs
src/notify/: config.rs  context.rs  dispatcher.rs  mod.rs  types.rs
static/: demo.html  index.html  send-verify.html
static/web-vault/: 155.01de4694602de44a385b.js  155.8f289e6e78ea2cd927ab.js  155.d06fd751c6eeada1c84d.js  160.d0007797b693fac30930.js  266.72e6dc7d31dd2f9f2ade.js  281.3c5c1564ba5374aaa943.js  281.746c309e9aded9f6574c.js  281.7b08cb8ad5fa80c3817b.js  35.33c2a01dad0e7ab08115.js  (+64 more)
(+113 files in other folders)
